--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
                 <h3>Ingresar</h3>
             </div>
             <div class="mb-3 px-4">
-              <label for="exampleInputEmail1" class="form-label">Email address</label>
+              <label for="exampleInputEmail1" class="form-label">Usuario</label>
               <div class="input-group">
                 <span class="input-group-text" id="basic-addon1"><i class="bi bi-person-fill"></i></span>
                 <input type="text" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" [(ngModel)]="usuario" >   
