--- a/src/app/components/form-registro/form-registro.component.html
+++ b/src/app/components/form-registro/form-registro.component.html
@@ -10,41 +10,65 @@
     
     <div class="container">
         <div class="row">
-            <div class="col-12 col-sm-12 col-md-6 col-lg-6 main-col offset-md-3">
+            <div class="col-12 col-sm-12 col-md-6 col-lg-6 offset-md-3">
                 <div class="mb-4">
-                   <form method="post" action="#" id="CustomerLoginForm" accept-charset="UTF-8" class="contact-form">	
+                   	
                       <div class="row">
                           <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
                                 <label for="FirstName">Nombres</label>
-                                <input type="text" name="customer[first_name]" placeholder="" id="FirstName" autofocus="">
+                                <input type="text" [(ngModel)]="nombre">
+                                
                             </div>
                            </div>
                            <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
                                 <label for="LastName">Apellidos</label>
-                                <input type="text" name="customer[last_name]" placeholder="" id="LastName">
+                                <input type="text" [(ngModel)]="apellido">
+                                
                             </div>
                            </div>
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
                             <div class="form-group">
-                                <label for="CustomerEmail">Codigo</label>
-                                <input type="email" name="customer[email]" placeholder="" id="CustomerEmail" class="" autocorrect="off" autocapitalize="off" autofocus="">
+                                <label for="CustomerEmail">idParte</label>
+                                <input type="number" [(ngModel)]="idParte" >
+                                
                             </div>
                         </div>
                         <div class="col-12 col-sm-12 col-md-12 col-lg-12">
-                            <div class="form-group">
-                                <label for="CustomerPassword">Contraseña</label>
-                                <input type="password" value="" name="customer[password]" placeholder="" id="CustomerPassword" class="">                        	
+                            <div class="row">
+                                <div class="col-6">
+                                <div class="form-group">
+                                    <label for="CustomerPassword">Fecha</label>
+                                    <input type="date" value="" [(ngModel)]="fechaNacimiento">
+                                                            	
+                                </div>
                             </div>
+                            
+                            <div class="col-6">
+                                <div class="form-group">
+                                    <label for="CustomerPassword">Sexo</label>
+                                    <select [(ngModel)]="genero">
+                                        <option value="Femenino">
+                                            Femenino
+                                        </option>
+                                        <option value="Masculino">
+                                            Masculino
+                                        </option>
+                                    </select>
+                                                          	
+                                </div>
+                            </div>
+                            </div>
+                            
                         </div>
                       </div>
                       <div class="row">
                         <div class="text-center col-12 col-sm-12 col-md-12 col-lg-12">
-                            <input type="submit" class="btn mb-3" value="Crear cuenta">
+                            <button class="btn" (click)="RegistrarParte()">Crear cuenta</button>
                         </div>
                      </div>
-                 </form>
+                 
                 </div>
                </div>
         </div>
