--- a/src/app/elements/carrusel/carrusel.component.html
+++ b/src/app/elements/carrusel/carrusel.component.html
@@ -3,7 +3,7 @@
   <div class="home-slideshow">
       <div class="slide">
           <div class="blur-up lazyload">
-                <img class="blur-up lazyload" data-src="assets/images/slideshow-banners/Tipojeans1.jpeg" src="assets/images/slideshow-banners/Tipojeans1.jpeg" alt="Shop Our New Collection" title="Shop Our New Collection" />
+                <img class="blur-up lazyload" data-src="assets/images/slideshow-banners/Tipojeans1.jpeg" src="./assets/images/slideshow-banners/Tipojeans1.jpeg" alt="Shop Our New Collection" title="Shop Our New Collection" />
                 <div class="slideshow__text-wrap slideshow__overlay classic middle">
                     <div class="slideshow__text-content middle">
                       <div class="container">
