--- a/src/app/vistas/Cliente/detalle-producto/detalle-producto.component.html
+++ b/src/app/vistas/Cliente/detalle-producto/detalle-producto.component.html
@@ -1,17 +1,5 @@
-
-<h2>{{nombre}}</h2>
-<select name="" id="">
-    <ng-container *ngFor="let detalle of detalleProducto">
-        <option value="detalle.costo">
-            {{detalle.costo}}
-        </option>
-    </ng-container>
-    
-</select>
-
+<body class="template-product belle">
 	<div class="pageWrapper">
-       
-        
         <!--Body Content-->
         <div id="page-content">
             <!--MainContent-->
@@ -19,7 +7,7 @@
                 <!--Breadcrumb-->
                 <div class="bredcrumbWrap">
                     <div class="container breadcrumbs">
-                        <a href="index.html" title="Back to the home page">Home</a><span aria-hidden="true">›</span><span>Short Description</span>
+                        <a href="index.html" title="Back to the home page">Home</a><span aria-hidden="true">›</span><span>Product With Left Thumbs</span>
                     </div>
                 </div>
                 <!--End Breadcrumb-->
@@ -32,54 +20,32 @@
                                 <div class="product-details-img">
                                     <div class="product-thumb">
                                         <div id="gallery" class="product-dec-slider-2 product-tab-left">
-                                            <a data-image="assets/images/product-detail-page/cape-dress-1.jpg" data-zoom-image="assets/images/product-detail-page/cape-dress-1.jpg" class="slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true" tabindex="-1">
-                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/cape-dress-1.jpg" alt="" />
+                                            <a data-image="assets/images/product-detail-page/camelia-reversible-big1.jpg" data-zoom-image="assets/images/product-detail-page/camelia-reversible-big1.jpg" class="slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true" tabindex="-1">
+                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/camelia-reversible0.jpg" alt="" />
                                             </a>
-                                            <a data-image="assets/images/product-detail-page/cape-dress-2.jpg" data-zoom-image="assets/images/product-detail-page/cape-dress-2.jpg" class="slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true" tabindex="-1">
-                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/cape-dress-2.jpg" alt="" />
+                                            <a data-image="assets/images/product-detail-page/camelia-reversible-big2.jpg" data-zoom-image="assets/images/product-detail-page/camelia-reversible-big2.jpg" class="slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true" tabindex="-1">
+                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/camelia-reversible.jpg" alt="" />
                                             </a>
-                                            <a data-image="assets/images/product-detail-page/cape-dress-3.jpg" data-zoom-image="assets/images/product-detail-page/cape-dress-3.jpg" class="slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true" tabindex="-1">
-                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/cape-dress-3.jpg" alt="" />
+                                            <a data-image="assets/images/product-detail-page/camelia-reversible-big3.jpg" data-zoom-image="assets/images/product-detail-page/camelia-reversible-big3.jpg" class="slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true" tabindex="-1">
+                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/camelia-reversible6.jpg" alt="" />
                                             </a>
-                                            <a data-image="assets/images/product-detail-page/cape-dress-4.jpg" data-zoom-image="assets/images/product-detail-page/cape-dress-4.jpg" class="slick-slide slick-cloned" data-slick-index="-1" aria-hidden="true" tabindex="-1">
-                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/cape-dress-4.jpg" alt="" />
-                                            </a>
-                                            <a data-image="assets/images/product-detail-page/cape-dress-5.jpg" data-zoom-image="assets/images/product-detail-page/cape-dress-5.jpg" class="slick-slide slick-cloned" data-slick-index="0" aria-hidden="true" tabindex="-1">
-                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/cape-dress-5.jpg" alt="" />
-                                            </a>
-                                            <a data-image="assets/images/product-detail-page/cape-dress-6.jpg" data-zoom-image="assets/images/product-detail-page/cape-dress-6.jpg" class="slick-slide slick-cloned" data-slick-index="1" aria-hidden="true" tabindex="-1">
-                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/cape-dress-6.jpg" alt="" />
-                                            </a>
-                                            <a data-image="assets/images/product-detail-page/cape-dress-7.jpg" data-zoom-image="assets/images/product-detail-page/cape-dress-7.jpg" class="slick-slide slick-cloned" data-slick-index="2" aria-hidden="true" tabindex="-1">
-                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/cape-dress-7.jpg" alt="" />
-                                            </a>
+                                            
                                         </div>
                                     </div>
                                     <div class="zoompro-wrap product-zoom-right pl-20">
                                         <div class="zoompro-span">
-                                            <img class="zoompro blur-up lazyload" data-zoom-image="assets/images/product-detail-page/cape-dress-1.jpg" alt="" src="assets/images/product-detail-page/cape-dress-1.jpg" />
+                                            <img class="blur-up lazyload zoompro" data-zoom-image="assets/images/product-detail-page/camelia-reversible-big1.jpg" alt="" src="assets/images/product-detail-page/camelia-reversible-big1.jpg" />
                                         </div>
                                         <div class="product-labels"><span class="lbl on-sale">Sale</span><span class="lbl pr-label1">new</span></div>
-                                        <div class="product-buttons">
-                                            <a href="https://www.youtube.com/watch?v=93A2jOW5Mog" class="btn popup-video" title="View Video"><i class="icon anm anm-play-r" aria-hidden="true"></i></a>
-                                            <a href="#" class="btn prlightbox" title="Zoom"><i class="icon anm anm-expand-l-arrows" aria-hidden="true"></i></a>
-                                        </div>
+                                        
                                     </div>
-                                    <div class="lightboximages">
-                                        <a href="assets/images/product-detail-page/cape-dress-1.jpg" data-size="1462x2048"></a>
-                                        <a href="assets/images/product-detail-page/cape-dress-2.jpg" data-size="1462x2048"></a>
-                                        <a href="assets/images/product-detail-page/cape-dress-3.jpg" data-size="1462x2048"></a>
-                                        <a href="assets/images/product-detail-page/cape-dress-4.jpg" data-size="1462x2048"></a>
-                                        <a href="assets/images/product-detail-page/cape-dress-5.jpg" data-size="1462x2048"></a>
-                                        <a href="assets/images/product-detail-page/cape-dress-6.jpg" data-size="1462x2048"></a>
-                                        <a href="assets/images/product-detail-page/cape-dress-7.jpg" data-size="731x1024"></a>
-                                    </div>
+                                    
         
                                 </div>
                             </div>
                             <div class="col-lg-6 col-md-6 col-sm-12 col-12">
                                     <div class="product-single__meta">
-                                        <h1 class="product-single__title">Short Description</h1>
+                                        <h1 class="product-single__title">PRODUCTO ELEGIDO</h1>
                                         <div class="product-nav clearfix">					
                                             <a href="#" class="next" title="Next"><i class="fa fa-angle-right" aria-hidden="true"></i></a>
                                         </div>
@@ -94,44 +60,32 @@
                                             <span class="product-price__price product-price__price-product-template product-price__sale product-price__sale--single">
                                                 <span id="ProductPrice-product-template"><span class="money">$500.00</span></span>
                                             </span>
-                                            <span class="discount-badge"> <span class="devider">|</span>&nbsp;
-                                                <span>You Save</span>
-                                                <span id="SaveAmount-product-template" class="product-single__save-amount">
-                                                <span class="money">$100.00</span>
-                                                </span>
-                                                <span class="off">(<span>16</span>%)</span>
-                                            </span>  
                                         </p>
-                                        <div class="orderMsg" data-user="23" data-time="24">
-                                            <img src="assets/images/order-icon.jpg" alt="" /> <strong class="items">5</strong> sold in last <strong class="time">26</strong> hours</div>
+                                        
                                         </div>
                                     <div class="product-single__description rte">
                                         <ul>
                                             <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
-                                            <li>Sed ut perspiciatis unde omnis iste natus error sit</li>
-                                            <li>Neque porro quisquam est qui dolorem ipsum quia dolor</li>
-                                            <li>Lorem Ipsum is not simply random text.</li>
                                         </ul>
-                                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</p>
                                     </div>
                                     <div id="quantity_message">Hurry! Only  <span class="items">4</span>  left in stock.</div>
                                     <form method="post" action="http://annimexweb.com/cart/add" id="product_form_10508262282" accept-charset="UTF-8" class="product-form product-form-product-template hidedropdown" enctype="multipart/form-data">
                                         <div class="swatch clearfix swatch-0 option1" data-option-index="0">
                                             <div class="product-form__item">
-                                              <label class="header">Color: <span class="slVariant">Red</span></label>
-                                              <div data-value="Black" class="swatch-element color black available">
-                                                <input class="swatchInput" id="swatch-0-black" type="radio" name="option-0" value="Black"><label class="swatchLbl color small" for="swatch-0-black" style="background-color:black;" title="Black"></label>
-                                              </div>
-                                              <div data-value="Maroon" class="swatch-element color maroon available">
-                                                <input class="swatchInput" id="swatch-0-maroon" type="radio" name="option-0" value="Maroon"><label class="swatchLbl color small" for="swatch-0-maroon" style="background-color:maroon;" title="Maroon"></label>
-                                              </div>
-                                              <div data-value="Blue" class="swatch-element color blue available">
-                                                <input class="swatchInput" id="swatch-0-blue" type="radio" name="option-0" value="Blue"><label class="swatchLbl color small" for="swatch-0-blue" style="background-color:blue;" title="Blue"></label>
-                                              </div>
-                                              <div data-value="Dark Green" class="swatch-element color dark-green available">
-                                                <input class="swatchInput" id="swatch-0-dark-green" type="radio" name="option-0" value="Dark Green"><label class="swatchLbl color small" for="swatch-0-dark-green" style="background-color:darkgreen;" title="Dark Green"></label>
-                                              </div>
-                                            </div>
+                                          <label class="header">Color: <span class="slVariant">Red</span></label>
+                                          <div data-value="Black" class="swatch-element color black available">
+                                            <input class="swatchInput" id="swatch-0-black" type="radio" name="option-0" value="Black"><label class="swatchLbl color small" for="swatch-0-black" style="background-color:black;" title="Black"></label>
+                                          </div>
+                                          <div data-value="Maroon" class="swatch-element color maroon available">
+                                            <input class="swatchInput" id="swatch-0-maroon" type="radio" name="option-0" value="Maroon"><label class="swatchLbl color small" for="swatch-0-maroon" style="background-color:maroon;" title="Maroon"></label>
+                                          </div>
+                                          <div data-value="Blue" class="swatch-element color blue available">
+                                            <input class="swatchInput" id="swatch-0-blue" type="radio" name="option-0" value="Blue"><label class="swatchLbl color small" for="swatch-0-blue" style="background-color:blue;" title="Blue"></label>
+                                          </div>
+                                          <div data-value="Dark Green" class="swatch-element color dark-green available">
+                                            <input class="swatchInput" id="swatch-0-dark-green" type="radio" name="option-0" value="Dark Green"><label class="swatchLbl color small" for="swatch-0-dark-green" style="background-color:darkgreen;" title="Dark Green"></label>
+                                          </div>
+                                        </div>
                                         </div>
                                         <div class="swatch clearfix swatch-1 option2" data-option-index="1">
                                             <div class="product-form__item">
@@ -168,7 +122,7 @@
                                             </div>                                
                                             <div class="product-form__item--submit">
                                                 <button type="button" name="add" class="btn product-form__cart-submit">
-                                                    <span>Add to cart</span>
+                                                    <span>Añadir al carrito</span>
                                                 </button>
                                             </div>
                                             <div class="shopify-payment-button" data-shopify="payment-button">
@@ -211,29 +165,6 @@
                         </div>
                     </div>
                     <!--End-product-single-->
-                    <!--Product Fearure-->
-                    <div class="prFeatures">
-                        <div class="row">
-                            <div class="col-12 col-sm-6 col-md-3 col-lg-3 feature">
-                                <img src="assets/images/credit-card.png" alt="Safe Payment" title="Safe Payment" />
-                                <div class="details"><h3>Safe Payment</h3>Pay with the world's most payment methods.</div>
-                            </div>
-                            <div class="col-12 col-sm-6 col-md-3 col-lg-3 feature">
-                                <img src="assets/images/shield.png" alt="Confidence" title="Confidence" />
-                                <div class="details"><h3>Confidence</h3>Protection covers your purchase and personal data.</div>
-                            </div>
-                            <div class="col-12 col-sm-6 col-md-3 col-lg-3 feature">
-                                <img src="assets/images/worldwide.png" alt="Worldwide Delivery" title="Worldwide Delivery" />
-                                <div class="details"><h3>Worldwide Delivery</h3>FREE &amp; fast shipping to over 200+ countries &amp; regions.</div>
-                            </div>
-                            <div class="col-12 col-sm-6 col-md-3 col-lg-3 feature">
-                                <img src="assets/images/phone-call.png" alt="Hotline" title="Hotline" />
-                                <div class="details"><h3>Hotline</h3>Talk to help line for your question on 4141 456 789, 4125 666 888</div>
-                            </div>
-                        </div>
-                    </div>
-                    <!--End Product Fearure-->
-                    
                     </div>
                 <!--#ProductSection-product-template-->
             </div>
@@ -242,7 +173,9 @@
     	<!--End Body Content-->
     
     
-    <!--Scoll Top-->
-    <span id="site-scroll"><i class="icon anm anm-angle-up-r"></i></span>
-    <!--End Scoll Top-->
+    
+   
+
+    </div>
+</body>
 
