--- a/src/app/elements/nav-bar/nav-bar.component.html
+++ b/src/app/elements/nav-bar/nav-bar.component.html
@@ -34,17 +34,11 @@
                               <div class="megamenu style4">
                                     <ul class="grid grid--uniform mmWrapper">
                                       <li class="grid__item lvl-1 col-md-3 col-lg-3"><a href="#" class="site-nav lvl-1">Jeans</a>
-                                            <!--<ul class="subLinks">
-                                                <li class="lvl-2"><a href="shop-left-sidebar.html" class="site-nav lvl-2">Left Sidebar</a></li>
-                                                <li class="lvl-2"><a href="shop-right-sidebar.html" class="site-nav lvl-2">Right Sidebar</a></li>
-                                                <li class="lvl-2"><a href="shop-fullwidth.html" class="site-nav lvl-2">Fullwidth</a></li>
-                                                <li class="lvl-2"><a href="shop-grid-3.html" class="site-nav lvl-2">3 items per row</a></li>
-                                                <li class="lvl-2"><a href="shop-grid-4.html" class="site-nav lvl-2">4 items per row</a></li>
-                                                <li class="lvl-2"><a href="shop-grid-5.html" class="site-nav lvl-2">5 items per row</a></li>
-                                                <li class="lvl-2"><a href="shop-grid-6.html" class="site-nav lvl-2">6 items per row</a></li>
-                                                <li class="lvl-2"><a href="shop-grid-7.html" class="site-nav lvl-2">7 items per row</a></li>
-                                                <li class="lvl-2"><a href="shop-listview.html" class="site-nav lvl-2">Product Listview</a></li>
-                                            </ul>-->
+                                            <ul class="subLinks">
+                                              <ng-container *ngFor="let categoria of categorias">
+                                                <li class="lvl-2" ><a style="cursor: pointer;" (click)="obtenerProductoByCategoria(categoria.codigoCategoria)" class="site-nav lvl-2">{{categoria.codigoCategoria}}{{categoria.nombreCategoria}}</a></li>
+                                              </ng-container>
+                                            </ul>
                                         </li>
                                         
                                         <li class="grid__item lvl-1 col-md-6 col-lg-6">
@@ -159,73 +153,11 @@
                 <div class="col-4 col-sm-3 col-md-3 col-lg-2">
                   
                   <div class="site-cart">
-                      <a href="#" class="site-header__cart" title="Cart">
-                          <i class="icon anm anm-bag-l"></i>
+                      <a  class="site-header__cart" >
+                          <i class="icon anm anm-bag-l" routerLink="/Carrito" style="cursor: pointer;"></i>
                             <span id="CartCount" class="site-header__cart-count" data-cart-render="item_count">{{cantidad}}</span>
                         </a>
-                        <!--Minicart Popup-->
-                        <div id="header-cart" class="block block-cart">
-                          <ul class="mini-products-list">
-                                <li class="item">
-                                  <a class="product-image" href="#">
-                                      <img src="assets/images/product-images/cape-dress-1.jpg" alt="3/4 Sleeve Kimono Dress" title="" />
-                                    </a>
-                                    <div class="product-details">
-                                      <a href="#" class="remove"><i class="anm anm-times-l" aria-hidden="true"></i></a>
-                                        <a href="#" class="edit-i remove"><i class="anm anm-edit" aria-hidden="true"></i></a>
-                                        <a class="pName" href="cart.html">Sleeve Kimono Dress</a>
-                                        <div class="variant-cart">Black / XL</div>
-                                        <div class="wrapQtyBtn">
-                                            <div class="qtyField">
-                                              <span class="label">Qty:</span>
-                                                <a class="qtyBtn minus" href="javascript:void(0);"><i class="fa anm anm-minus-r" aria-hidden="true"></i></a>
-                                                <input type="text" id="Quantity" name="quantity" value="1" class="product-form__input qty">
-                                                <a class="qtyBtn plus" href="javascript:void(0);"><i class="fa anm anm-plus-r" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                        <div class="priceRow">
-                                          <div class="product-price">
-                                              <span class="money">$59.00</span>
-                                            </div>
-                                         </div>
-                  </div>
-                                </li>
-                                <li class="item">
-                                  <a class="product-image" href="#">
-                                      <img src="assets/images/product-images/cape-dress-2.jpg" alt="Elastic Waist Dress - Black / Small" title="" />
-                                    </a>
-                                    <div class="product-details">
-                                      <a href="#" class="remove"><i class="anm anm-times-l" aria-hidden="true"></i></a>
-                                        <a href="#" class="edit-i remove"><i class="anm anm-edit" aria-hidden="true"></i></a>
-                                        <a class="pName" href="cart.html">Elastic Waist Dress</a>
-                                        <div class="variant-cart">Gray / XXL</div>
-                                        <div class="wrapQtyBtn">
-                                            <div class="qtyField">
-                                              <span class="label">Qty:</span>
-                                                <a class="qtyBtn minus" href="javascript:void(0);"><i class="fa anm anm-minus-r" aria-hidden="true"></i></a>
-                                                <input type="text" id="Quantity" name="quantity" value="1" class="product-form__input qty">
-                                                <a class="qtyBtn plus" href="javascript:void(0);"><i class="fa anm anm-plus-r" aria-hidden="true"></i></a>
-                                            </div>
-                                        </div>
-                                         <div class="priceRow">
-                                            <div class="product-price">
-                                                <span class="money">$99.00</span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </li>
-                            </ul>
-                            <div class="total">
-                              <div class="total-in">
-                                  <span class="label">Cart Subtotal:</span><span class="product-price"><span class="money">$748.00</span></span>
-                                </div>
-                                 <div class="buttonSet text-center">
-                                    <a href="cart.html" class="btn btn-secondary btn--small">View Cart</a>
-                                    <a href="checkout.html" class="btn btn-secondary btn--small">Checkout</a>
-                                </div>
-                            </div>
-                        </div>
-                        <!--End Minicart Popup-->
+                        
                     </div>
                     
                 </div>
