--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -24,7 +24,7 @@
             </div>
             
             <div class="mb-4 px-3 d-grid">
-                <button type="submit" class="btn btn-primary" (click)="login()">Ingresar</button>
+                <button type="submit" class="btn btn-primary" >Ingresar</button>
             </div>
             <div class="mb-4 px-3 d-grid">
               <a href="#" id="RecoverPassword">¿Olvido su contraseña?</a> &nbsp; | &nbsp;
