--- a/src/app/vistas/Cliente/carrito/carrito.component.html
+++ b/src/app/vistas/Cliente/carrito/carrito.component.html
@@ -1,1 +1,133 @@
-<p>carrito works!</p>
+
+<body class="page-template belle">
+    <div class="pageWrapper">
+        <app-nav-bar></app-nav-bar>
+        
+        <!--Body Content-->
+        <div id="page-content">
+            <!--Page Title-->
+            <div class="page section-header text-center">
+                <div class="page-title">
+                    <div class="wrapper"><h1 class="page-width">Carrito de compra</h1></div>
+                  </div>
+            </div>
+            <!--End Page Title-->
+            
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-12 col-md-8 col-lg-8 main-col">
+                        <form action="#" method="post" class="cart style2">
+                            <table>
+                                <thead class="cart__row cart__header">
+                                    <tr>
+                                        <th colspan="0" class="text-center">id</th>
+                                        <th colspan="1" class="text-center">Producto</th>
+                                        <th class="text-center">Precio</th>
+                                        <th class="text-center">Cantidad</th>
+                                        <th class="text-right">Total</th>
+                                        <th class="action">&nbsp;</th>
+                                    </tr>
+                                </thead>
+                                <tbody *ngFor="let articulo of articulosCarrito; let i =index">
+                                    <tr class="cart__row border-bottom line1 cart-flex border-top">
+                                        <td class="cart__meta small--text-center cart-flex-item">
+                                            <div class="list-view-item__title">
+                                                <a >{{articulo.idProducto}}</a>
+                                            </div>
+                                            
+                                        </td>
+                                        <td class="cart__meta small--text-left cart-flex-item">
+                                            <div class="list-view-item__title">
+                                                <a href="#">{{articulo.descripcion}}</a>
+                                            </div>
+                                            
+                                        </td>
+                                        <td class="cart__price-wrapper cart-flex-item">
+                                            <span class="money">S/.{{articulo.precioUnitario}}</span>
+                                        </td>
+                                        <td class="cart__update-wrapper cart-flex-item text-right">
+                                            <div class="cart__qty text-center">
+                                                <div class="qtyField">
+                                                    
+                                                    <input  type="number" [value]="articulo.cantidad" min="1" disabled>
+                                                    
+                                                </div>
+                                            </div>
+                                        </td>
+                                        <td class="text-right small--hide cart-price">
+                                            <div><span class="money">{{articulo.precioTotal}}</span></div>
+                                        </td>
+                                        <td class="text-center small--hide"><a (click)="eliminarArticuloCarrito(i)" style="cursor: pointer;" class="btn btn--secondary cart__remove" title="Remove tem"><i class="icon icon anm anm-times-l" ></i></a></td>
+                                    </tr>
+                                    
+                                </tbody>
+                                <tfoot>
+                                    <tr>
+                                        <td colspan="3" class="text-left"><a href="http://annimexweb.com/" class="btn--link cart-continue"><i class="icon icon-arrow-circle-left"></i> Continue shopping</a></td>
+                                        <td colspan="3" class="text-right"><button type="submit" name="update" class="btn--link cart-update"><i class="fa fa-refresh" (click)="actualizarResumen()"></i> Update</button></td>
+                                    </tr>
+                                </tfoot>
+                        </table>
+                        
+                        <div class="currencymsg">We processes all orders in USD. While the content of your cart is currently displayed in USD, the checkout will use USD at the most current exchange rate.</div>
+                        <hr>
+                        <div id="shipping-calculator" class="mb-4">
+                            <h5 class="small--text-center">Get shipping estimates</h5>
+                            <div class="row">
+                                <div class="col-12 col-sm-12 col-md-4">
+                                    <div class="form-group">
+                                        <label for="address_country">Country</label>
+                                          <select id="address_country" name="address[country]" data-default="United States"><option value="Belgium" data-provinces="[]">Belgium</option>
+                                            <option value="---" data-provinces="[]">---</option>
+                                            <option value="Afghanistan" data-provinces="[]">Afghanistan</option>
+                                            </select>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-sm-12 col-md-4">
+                                    <div class="form-group">
+                                        <label>State</label>
+                                          <select id="address_province" name="address[province]" data-default="">
+                                          <option value="Alabama">Alabama</option>
+                                          
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="col-12 col-sm-12 col-md-4">
+                                    <div class="form-group">
+                                        <label for="address_zip">Postal/Zip Code</label>
+                                          <input type="text" id="address_zip" name="address[zip]">
+                                    </div>
+                                </div>
+                                <div class="col-12 col-sm-12 col-md-12 actionRow text-center">
+                                      <div><input type="button" class="btn btn--secondary get-rates" value="Calculate shipping"></div>
+                                  </div>
+                            </div>
+                        </div> 
+                        
+                        </form>                   
+                       </div>
+                    <div class="col-12 col-sm-12 col-md-4 col-lg-4 cart__footer">
+                        <div class="cart-note">
+                            
+                        </div>
+                        <div class="solid-border">
+                          <div class="row">
+                              <span class="col-12 col-sm-6 cart__subtotal-title"><strong>Subtotal</strong></span>
+                            <span class="col-12 col-sm-6 cart__subtotal-title cart__subtotal text-right"><span class="money">S/.{{carritoService.montoTotal}}</span></span>
+                          </div>
+                          
+                          <input type="submit" name="checkout" id="cartCheckout" class="btn btn--small-wide checkout" value="Checkout" disabled="disabled">
+                          <div class="paymnet-img"><img src="assets/images/payment-img.jpg" alt="Payment"></div>
+                        </div>
+    
+                    </div>
+                </div>
+            </div>
+            
+        </div>
+        <!--End Body Content-->
+        
+    </div>
+   
+    </body>
+    <app-footer></app-footer>
