--- a/src/app/vistas/Cliente/detalle-producto/detalle-producto.component.html
+++ b/src/app/vistas/Cliente/detalle-producto/detalle-producto.component.html
@@ -1,5 +1,6 @@
 <body class="template-product belle">
 	<div class="pageWrapper">
+        <app-nav-bar></app-nav-bar>
         <!--Body Content-->
         <div id="page-content">
             <!--MainContent-->
@@ -20,15 +21,13 @@
                                 <div class="product-details-img">
                                     <div class="product-thumb">
                                         <div id="gallery" class="product-dec-slider-2 product-tab-left">
-                                            <a data-image="assets/images/product-detail-page/camelia-reversible-big1.jpg" data-zoom-image="assets/images/product-detail-page/camelia-reversible-big1.jpg" class="slick-slide slick-cloned" data-slick-index="-4" aria-hidden="true" tabindex="-1">
-                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/camelia-reversible0.jpg" alt="" />
-                                            </a>
-                                            <a data-image="assets/images/product-detail-page/camelia-reversible-big2.jpg" data-zoom-image="assets/images/product-detail-page/camelia-reversible-big2.jpg" class="slick-slide slick-cloned" data-slick-index="-3" aria-hidden="true" tabindex="-1">
-                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/camelia-reversible.jpg" alt="" />
-                                            </a>
-                                            <a data-image="assets/images/product-detail-page/camelia-reversible-big3.jpg" data-zoom-image="assets/images/product-detail-page/camelia-reversible-big3.jpg" class="slick-slide slick-cloned" data-slick-index="-2" aria-hidden="true" tabindex="-1">
-                                                <img class="blur-up lazyload" src="assets/images/product-detail-page/camelia-reversible6.jpg" alt="" />
-                                            </a>
+                                            <ng-container *ngFor="let imagen of productosImagenes">
+                                                <a [attr.data-image]="imagen.ruta" [attr.data-zoom-image]="imagen.ruta" class="slick-slide slick-cloned" data-slick-index="imagen.idProducto" aria-hidden="true" tabindex="-1">
+                                                    <img class="blur-up lazyload" [src]="imagen.ruta" alt="" />
+                                                </a>
+                                                
+                                            </ng-container>
+                                            
                                             
                                         </div>
                                     </div>
@@ -51,86 +50,65 @@
                                         </div>
                                         <div class="prInfoRow">
                                             <div class="product-stock"> <span class="instock ">In Stock</span> <span class="outstock hide">Unavailable</span> </div>
-                                            <div class="product-sku">SKU: <span class="variant-sku">19115-rdxs</span></div>
+                                            <div class="product-sku">SKU: <span class="variant-sku">SK-00{{id}}</span></div>
                                             <div class="product-review"><a class="reviewLink" href="#tab2"><i class="font-13 fa fa-star"></i><i class="font-13 fa fa-star"></i><i class="font-13 fa fa-star"></i><i class="font-13 fa fa-star-o"></i><i class="font-13 fa fa-star-o"></i><span class="spr-badge-caption">6 reviews</span></a></div>
                                         </div>
                                         <p class="product-single__price product-single__price-product-template">
-                                            <span class="visually-hidden">Regular price</span>
-                                            <s id="ComparePrice-product-template"><span class="money">$600.00</span></s>
+                                            
                                             <span class="product-price__price product-price__price-product-template product-price__sale product-price__sale--single">
-                                                <span id="ProductPrice-product-template"><span class="money">$500.00</span></span>
+                                                <span id="ProductPrice-product-template"><span class="money">S/.{{producto.costo}}</span></span>
                                             </span>
+                                            
                                         </p>
                                         
                                         </div>
                                     <div class="product-single__description rte">
                                         <ul>
-                                            <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit</li>
+                                            <strong>Descripcion:</strong>  {{producto.descripcion}}
                                         </ul>
                                     </div>
-                                    <div id="quantity_message">Hurry! Only  <span class="items">4</span>  left in stock.</div>
-                                    <form method="post" action="http://annimexweb.com/cart/add" id="product_form_10508262282" accept-charset="UTF-8" class="product-form product-form-product-template hidedropdown" enctype="multipart/form-data">
-                                        <div class="swatch clearfix swatch-0 option1" data-option-index="0">
-                                            <div class="product-form__item">
-                                          <label class="header">Color: <span class="slVariant">Red</span></label>
-                                          <div data-value="Black" class="swatch-element color black available">
-                                            <input class="swatchInput" id="swatch-0-black" type="radio" name="option-0" value="Black"><label class="swatchLbl color small" for="swatch-0-black" style="background-color:black;" title="Black"></label>
-                                          </div>
-                                          <div data-value="Maroon" class="swatch-element color maroon available">
-                                            <input class="swatchInput" id="swatch-0-maroon" type="radio" name="option-0" value="Maroon"><label class="swatchLbl color small" for="swatch-0-maroon" style="background-color:maroon;" title="Maroon"></label>
-                                          </div>
-                                          <div data-value="Blue" class="swatch-element color blue available">
-                                            <input class="swatchInput" id="swatch-0-blue" type="radio" name="option-0" value="Blue"><label class="swatchLbl color small" for="swatch-0-blue" style="background-color:blue;" title="Blue"></label>
-                                          </div>
-                                          <div data-value="Dark Green" class="swatch-element color dark-green available">
-                                            <input class="swatchInput" id="swatch-0-dark-green" type="radio" name="option-0" value="Dark Green"><label class="swatchLbl color small" for="swatch-0-dark-green" style="background-color:darkgreen;" title="Dark Green"></label>
-                                          </div>
-                                        </div>
-                                        </div>
+                                    
+                                    
+                                        
                                         <div class="swatch clearfix swatch-1 option2" data-option-index="1">
                                             <div class="product-form__item">
-                                              <label class="header">Size: <span class="slVariant">XS</span></label>
-                                              <div data-value="XS" class="swatch-element xs available">
-                                                <input class="swatchInput" id="swatch-1-xs" type="radio" name="option-1" value="XS">
-                                                <label class="swatchLbl medium rectangle" for="swatch-1-xs" title="XS">XS</label>
-                                              </div>
-                                              <div data-value="S" class="swatch-element s available">
-                                                <input class="swatchInput" id="swatch-1-s" type="radio" name="option-1" value="S">
-                                                <label class="swatchLbl medium rectangle" for="swatch-1-s" title="S">S</label>
-                                              </div>
-                                              <div data-value="M" class="swatch-element m available">
-                                                <input class="swatchInput" id="swatch-1-m" type="radio" name="option-1" value="M">
-                                                <label class="swatchLbl medium rectangle" for="swatch-1-m" title="M">M</label>
-                                              </div>
-                                              <div data-value="L" class="swatch-element l available">
-                                                <input class="swatchInput" id="swatch-1-l" type="radio" name="option-1" value="L">
-                                                <label class="swatchLbl medium rectangle" for="swatch-1-l" title="L">L</label>
-                                              </div>
+                                              <label class="header">Tallas: </label>
+                                              <table class="table">
+                                                <thead>
+                                                  <tr>
+                                                    <th scope="col">Descripcion</th>
+                                                    <th scope="col">Opcion</th>
+                                                </thead>
+                                                <tbody>
+                                                  <tr *ngFor="let detalle of productosByCaract">
+                                                    <th >{{detalle.descripcion}}</th>
+                                                    <td><button (click)="obtenerDatosByIdProducto(detalle.idProducto)">Ver</button></td>
+                                                  </tr>
+                                                </tbody>
+                                              </table>
                                             </div>
                                         </div>
-                                        <p class="infolinks"><a href="#sizechart" class="sizelink btn"> Size Guide</a> <a href="#productInquiry" class="emaillink btn"> Ask About this Product</a></p>
+                                        
                                         <!-- Product Action -->
                                         <div class="product-action clearfix">
                                             <div class="product-form__item--quantity">
-                                                <div class="wrapQtyBtn">
-                                                    <div class="qtyField">
-                                                        <a class="qtyBtn minus" href="javascript:void(0);"><i class="fa anm anm-minus-r" aria-hidden="true"></i></a>
-                                                        <input type="text" id="Quantity" name="quantity" value="1" class="product-form__input qty">
-                                                        <a class="qtyBtn plus" href="javascript:void(0);"><i class="fa anm anm-plus-r" aria-hidden="true"></i></a>
-                                                    </div>
-                                                </div>
+                                                
+                                                        
+                                                        <input type="number" id="Quantity" name="quantity" value="1" min="1" class="product-form__input qty" [(ngModel)]="cantidad">
+                                                        
+                                                    
                                             </div>                                
                                             <div class="product-form__item--submit">
-                                                <button type="button" name="add" class="btn product-form__cart-submit">
+                                                <button type="button" name="add" class="btn product-form__cart-submit" (click)="AniadirProducto(id,producto.descripcion,producto.costo,cantidad)">
                                                     <span>Añadir al carrito</span>
                                                 </button>
                                             </div>
                                             <div class="shopify-payment-button" data-shopify="payment-button">
-                                                <button type="button" class="shopify-payment-button__button shopify-payment-button__button--unbranded">Comprar ahora</button>
+                                                <button type="button" class="shopify-payment-button__button shopify-payment-button__button--unbranded" >Comprar ahora</button>
                                             </div>
                                         </div>
                                         <!-- End Product Action -->
-                                    </form>
+                                    
                                     
                                         
                                     <p id="freeShipMsg" class="freeShipMsg" data-price="199"><i class="fa fa-truck" aria-hidden="true"></i> GETTING CLOSER! ONLY <b class="freeShip"><span class="money" data-currency-usd="$199.00" data-currency="USD">$199.00</span></b> AWAY FROM <b>FREE SHIPPING!</b></p>
@@ -153,4 +131,4 @@
 
     </div>
 </body>
-
+<app-footer></app-footer>
