--- a/src/app/elements/nav-bar/nav-bar.component.html
+++ b/src/app/elements/nav-bar/nav-bar.component.html
@@ -155,7 +155,7 @@
                   <div class="site-cart">
                       <a  class="site-header__cart" >
                           <i class="icon anm anm-bag-l" routerLink="/Carrito" style="cursor: pointer;"></i>
-                            <span id="CartCount" class="site-header__cart-count" data-cart-render="item_count">{{cantidad}}</span>
+                            <span id="CartCount" class="site-header__cart-count" data-cart-render="item_count">{{carritoService.cantidadTotal}}</span>
                         </a>
                         
                     </div>
