--- a/src/app/vistas/Cliente/carrito/carrito.component.html
+++ b/src/app/vistas/Cliente/carrito/carrito.component.html
@@ -69,37 +69,39 @@
                                 </tfoot>
                         </table>
                         
-                        <div class="currencymsg">We processes all orders in USD. While the content of your cart is currently displayed in USD, the checkout will use USD at the most current exchange rate.</div>
+                        
                         <hr>
                         <div id="shipping-calculator" class="mb-4">
-                            <h5 class="small--text-center">Get shipping estimates</h5>
+                            <h5 class="small--text-center">Informacion de envio</h5>
                             <div class="row">
                                 <div class="col-12 col-sm-12 col-md-4">
                                     <div class="form-group">
-                                        <label for="address_country">Country</label>
-                                          <select id="address_country" name="address[country]" data-default="United States"><option value="Belgium" data-provinces="[]">Belgium</option>
-                                            <option value="---" data-provinces="[]">---</option>
-                                            <option value="Afghanistan" data-provinces="[]">Afghanistan</option>
-                                            </select>
+                                        <label for="address_country">Pais</label>
+                                          <select id="address_country" name="address[country]" data-default="United States">
+                                            <option value="Belgium" data-provinces="[]">Peru</option>
+                                            <option value="---" data-provinces="[]">Colombia</option>
+                                            
+                                        </select>
                                     </div>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-4">
                                     <div class="form-group">
-                                        <label>State</label>
-                                          <select id="address_province" name="address[province]" data-default="">
-                                          <option value="Alabama">Alabama</option>
+                                        <label>Medio Transporte</label>
+                                          <select >
+                                          <option value="Aereo">Aereo</option>
+                                          <option value="Terrestre">Terrestre</option>
                                           
                                         </select>
                                     </div>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-4">
                                     <div class="form-group">
-                                        <label for="address_zip">Postal/Zip Code</label>
+                                        <label for="address_zip">Direccion</label>
                                           <input type="text" id="address_zip" name="address[zip]">
                                     </div>
                                 </div>
                                 <div class="col-12 col-sm-12 col-md-12 actionRow text-center">
-                                      <div><input type="button" class="btn btn--secondary get-rates" value="Calculate shipping"></div>
+                                      <div><input type="button" class="btn btn--secondary get-rates" value="Adjuntar informacion de envio"></div>
                                   </div>
                             </div>
                         </div> 
@@ -112,12 +114,17 @@
                         </div>
                         <div class="solid-border">
                           <div class="row">
-                              <span class="col-12 col-sm-6 cart__subtotal-title"><strong>Subtotal</strong></span>
+                            <span class="col-12 col-sm-6 cart__subtotal-title"><strong>Cantidad:</strong></span>
+                            <span class="col-12 col-sm-6 cart__subtotal-title cart__subtotal text-right"><span class="money">{{carritoService.cantidadTotal}}</span></span>
+                            <span class="col-12 col-sm-6 cart__subtotal-title"><strong>Transporte:</strong></span>
+                            <span class="col-12 col-sm-6 cart__subtotal-title cart__subtotal text-right"><span class="money">S/.{{carritoService.cantidadTotal}}</span></span>
+                            <span class="col-12 col-sm-6 cart__subtotal-title"><strong>Subtotal: </strong></span>
                             <span class="col-12 col-sm-6 cart__subtotal-title cart__subtotal text-right"><span class="money">S/.{{carritoService.montoTotal}}</span></span>
+                            
                           </div>
                           
-                          <input type="submit" name="checkout" id="cartCheckout" class="btn btn--small-wide checkout" value="Checkout" disabled="disabled">
-                          <div class="paymnet-img"><img src="assets/images/payment-img.jpg" alt="Payment"></div>
+                          <input type="submit" name="checkout" id="cartCheckout" class="btn btn--small-wide checkout" value="Comprar" disabled="disabled">
+                          
                         </div>
     
                     </div>
