--- a/src/app/components/form-registro/form-registro.component.html
+++ b/src/app/components/form-registro/form-registro.component.html
@@ -92,7 +92,7 @@
                       </div>
                       <div class="row">
                         <div class="text-center col-12 col-sm-12 col-md-12 col-lg-12">
-                            <button class="btn" (click)="RegistrarParte()">Crear cuenta</button>
+                            <button class="btn" (click)="RegistrarParte()" data-bs-toggle="modal" data-bs-target="#exampleModal">Crear cuenta</button>
                         </div>
                      </div>
                  
@@ -102,4 +102,23 @@
     </div>
     
 </div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Registro</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            Usuario registrado
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" (click)="redirigir()">Aceptar</button>
+          
+        </div>
+      </div>
+    </div>
+  </div>
+
 <!--End Body Content-->
