--- a/src/app/vistas/Cliente/carrito/carrito.component.html
+++ b/src/app/vistas/Cliente/carrito/carrito.component.html
@@ -123,7 +123,7 @@
                             
                           </div>
                           
-                          <input type="submit" name="checkout" id="cartCheckout" class="btn btn--small-wide checkout" value="Comprar" disabled="disabled">
+                          <button  name="checkout" id="cartCheckout" class="btn btn--small-wide checkout" (click)="enviarPedido()" data-bs-toggle="modal" data-bs-target="#exampleModal">Comprar</button>
                           
                         </div>
     
@@ -135,6 +135,28 @@
         <!--End Body Content-->
         
     </div>
-   
+
+  
+  <!-- Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Pedido completo</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            
+                <h5>codPedido: {{carritoService.idPedido}}</h5>
+                <h5>Total a pagar: {{carritoService.montoTotal}}</h5>
+            Pedido reservado, tiene 3 dias para cancelar 50% del pedido, sino se cancelara su orden"
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          
+        </div>
+      </div>
+    </div>
+  </div>
     </body>
     <app-footer></app-footer>
