--- a/src/app/vistas/Cliente/inicio/inicio.component.html
+++ b/src/app/vistas/Cliente/inicio/inicio.component.html
@@ -23,7 +23,7 @@
                                         <!-- start product image -->
                                         <div class="product-image">
                                             <!-- start product image -->
-                                            <a href="product-layout-1.html" class="grid-view-item__link">
+                                            <a  class="grid-view-item__link">
                                                 <!-- image -->
                                                 <img class="primary blur-up lazyload" [attr.data-src]="imagenes[i]" [src]="imagenes[i]" alt="image" title="product">
                                                 <!-- End image -->
@@ -39,10 +39,7 @@
                                             
                                             
         
-                                            <!-- Start product button -->
-                                            <form class="variants add" action="#" onclick="window.location.href='cart.html'"method="post">
-                                                <button class="btn btn-addto-cart" type="button" tabindex="0">Añadir a carrito</button>
-                                            </form>
+                                            
                                             
                                             <!-- end product button -->
                                         </div>
@@ -82,9 +79,9 @@
                     <div class="hero__inner">
                         <div class="container">
                             <div class="wrap-text left text-small font-bold">
-                                <h2 class="h2 mega-title">Belle <br> The best choice for your store</h2>
-                                <div class="rte-setting mega-subtitle">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</div>
-                                <a href="#" class="btn">Purchase Now</a>
+                                <h2 class="h2 mega-title">Vizzlan <br> La mejor eleccion...</h2>
+                                <div class="rte-setting mega-subtitle">Se cuenta con diseños propios aceptados y con la calidad necesaria</div>
+                                
                             </div>
                         </div>
                     </div>
