--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,9 +4,13 @@
         <div class="row">
           <div class="col-10 col-sm-8 col-md-5 col-lg-4">
                 <div class="currency-picker" >
-                    <div >
-                        <input type="text" style="width: 50%; height: 50%;background-color: aliceblue;" class="input"><button class="btn" style="height: 20%;">Buscar</button>
+                  
+                        <div >
+                        <input  [(ngModel)]="palabraBuscar"    type="text" style="width: 50%; height: 50%;background-color: aliceblue;" class="input"><button class="btn" style="height: 20%;" (click)="obtenerProductoByBuscador()">Buscar</button>
                     </div>
+
+                   
+                    
                 </div>
                 <div class="language-dropdown">
                     <span class="language-dd">Español</span>
