--- a/src/app/elements/nav-bar/nav-bar.component.html
+++ b/src/app/elements/nav-bar/nav-bar.component.html
@@ -1,6 +1,6 @@
     <!--Promotion Bar-->
     <div class="notification-bar mobilehide">
-      <a href="#" class="notification-bar__message">20% off your very first purchase, use promo code: belle fashion</a>
+      <a href="#" class="notification-bar__message">---------------</a>
         <span class="close-announcement">×</span>
     </div>
     <!--End Promotion Bar-->
@@ -36,7 +36,7 @@
                                       <li class="grid__item lvl-1 col-md-3 col-lg-3"><a href="#" class="site-nav lvl-1">Jeans</a>
                                             <ul class="subLinks">
                                               <ng-container *ngFor="let categoria of categorias">
-                                                <li class="lvl-2" ><a style="cursor: pointer;" (click)="obtenerProductoByCategoria(categoria.codigoCategoria)" class="site-nav lvl-2">{{categoria.codigoCategoria}}{{categoria.nombreCategoria}}</a></li>
+                                                <li class="lvl-2" ><a style="cursor: pointer;" (click)="obtenerProductoByCategoria(categoria.codigoCategoria)" class="site-nav lvl-2">{{categoria.nombreCategoria}}</a></li>
                                               </ng-container>
                                             </ul>
                                         </li>
