--- a/src/app/vistas/Cliente/detalle-producto/detalle-producto.component.html
+++ b/src/app/vistas/Cliente/detalle-producto/detalle-producto.component.html
@@ -8,7 +8,7 @@
                 <!--Breadcrumb-->
                 <div class="bredcrumbWrap">
                     <div class="container breadcrumbs">
-                        <a href="index.html" title="Back to the home page">Home</a><span aria-hidden="true">›</span><span>Product With Left Thumbs</span>
+                        <a href="index.html" title="Back to the home page">Home</a><span aria-hidden="true">›</span><span>Productos</span>
                     </div>
                 </div>
                 <!--End Breadcrumb-->
@@ -33,7 +33,7 @@
                                     </div>
                                     <div class="zoompro-wrap product-zoom-right pl-20">
                                         <div class="zoompro-span">
-                                            <img class="blur-up lazyload zoompro" data-zoom-image="assets/images/product-detail-page/camelia-reversible-big1.jpg" alt="" src="assets/images/product-detail-page/camelia-reversible-big1.jpg" />
+                                            <img class="blur-up lazyload zoompro" data-zoom-image="assets/images/product-detail-page/camelia-reversible-big1.jpg" alt="" [src]="DetalleProd.imagenReferencial" />
                                         </div>
                                         <div class="product-labels"><span class="lbl on-sale">Sale</span><span class="lbl pr-label1">new</span></div>
                                         
@@ -99,21 +99,23 @@
                                                     
                                             </div>                                
                                             <div class="product-form__item--submit">
-                                                <button type="button" name="add" class="btn product-form__cart-submit" (click)="AniadirProducto(id,producto.descripcion,producto.costo,cantidad)">
+                                                <button type="button" name="add" class="btn product-form__cart-submit" (click)="AniadirProducto(id,producto.descripcion,producto.costo,cantidad)" data-bs-toggle="modal" data-bs-target="#exampleModal">
                                                     <span>Añadir al carrito</span>
                                                 </button>
                                             </div>
-                                            <div class="shopify-payment-button" data-shopify="payment-button">
+                                            
+                                                <div class="shopify-payment-button" data-shopify="payment-button">
                                                 <button type="button" class="shopify-payment-button__button shopify-payment-button__button--unbranded" >Comprar ahora</button>
                                             </div>
+
+                                            
+                                            
                                         </div>
                                         <!-- End Product Action -->
                                     
                                     
                                         
-                                    <p id="freeShipMsg" class="freeShipMsg" data-price="199"><i class="fa fa-truck" aria-hidden="true"></i> GETTING CLOSER! ONLY <b class="freeShip"><span class="money" data-currency-usd="$199.00" data-currency="USD">$199.00</span></b> AWAY FROM <b>FREE SHIPPING!</b></p>
-                                    <p class="shippingMsg"><i class="fa fa-clock-o" aria-hidden="true"></i> ESTIMATED DELIVERY BETWEEN <b id="fromDate">Wed. May 1</b> and <b id="toDate">Tue. May 7</b>.</p>
-                                    <div class="userViewMsg" data-user="20" data-time="11000"><i class="fa fa-users" aria-hidden="true"></i> <strong class="uersView">14</strong> PEOPLE ARE LOOKING FOR THIS PRODUCT</div>
+                                    
                                 </div>
                         </div>
                     </div>
@@ -131,4 +133,22 @@
 
     </div>
 </body>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Armado de carrito</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            Producto añadido
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+          
+        </div>
+      </div>
+    </div>
+  </div>
 <app-footer></app-footer>
