--- a/src/app/vistas/Cliente/productos/productos.component.html
+++ b/src/app/vistas/Cliente/productos/productos.component.html
@@ -90,16 +90,16 @@
                             <!--End Toolbar-->
                             <div class="grid-products grid--view-items">
                                 <div class="row">
-                                    <div  *ngFor="let productoByCateg of filtroService.productosByCateg"  class="col-6 col-sm-6 col-md-4 col-lg-2 item">
+                                    <div  *ngFor="let productoByCateg of filtroService.productosByCateg; let i=index"  class="col-6 col-sm-6 col-md-4 col-lg-2 item">
                                         <!-- start product image -->
                                         <div class="product-image">
                                             <!-- start product image -->
-                                            <a style="cursor: pointer;" (click)="obtenerCaracteristicasProdById(productoByCateg.idProducto)" >
+                                            <a style="cursor: pointer;" (click)="obtenerCaracteristicasProdById(productoByCateg.idProducto,imagenes[i])" >
                                                 <!-- image -->
-                                                <img class="primary blur-up lazyload" data-src="assets/images/product-images/product-image1.jpg" src="assets/images/product-images/product-image1.jpg" alt="image" title="product">
+                                                <img class="primary blur-up lazyload" [attr.data-src]="imagenes[i]" [src]="imagenes[i]" alt="image" title="product">
                                                 <!-- End image -->
                                                 <!-- Hover image -->
-                                                <img class="hover blur-up lazyload" data-src="assets/images/product-images/product-image1-1.jpg" src="assets/images/product-images/product-image1-1.jpg" alt="image" title="product">
+                                                <img class="hover blur-up lazyload" [attr.data-src]="imagenes[i]" [src]="imagenes[i]" alt="image" title="product">
                                                 <!-- End hover image -->
                                                 <!-- product label -->
                                                 <div class="product-labels rectangular"><span class="lbl on-sale">-16%</span> <span class="lbl pr-label1">new</span></div>
@@ -107,9 +107,7 @@
                                             </a>
                                             <!-- end product image -->
                                             <!-- Start product button -->
-                                            <form class="variants add" action="#" onclick="window.location.href='cart.html'"method="post">
-                                                <button class="btn btn-addto-cart" type="button">Select Options</button>
-                                            </form>
+                                            
                                             <div class="button-set">
                                                 <a href="javascript:void(0)" title="Quick View" class="quick-view-popup quick-view" data-toggle="modal" data-target="#content_quickview">
                                                     <i class="icon anm anm-search-plus-r"></i>
